# oci-spec-rs-nostd

./: Cargo.toml  README.md
.github/workflows/: ci.yml  cross.yml  gh-pages.yml  release.yml  security-audit.yml
src/: error.rs  lib.rs
src/runtime/: capability.rs  features.rs  hooks.rs  linux.rs  miscellaneous.rs  mod.rs  process.rs  solaris.rs  state.rs  version.rs  vm.rs  windows.rs  zos.rs
tests-no-std/: .gitignore  Cargo.toml  README.md
tests-no-std/src/: test_minimal.rs  test_std_simulation.rs
