[package]
name = "oci-spec"
version = "0.8.4"
edition = "2021"
authors = [
    "Furisto",
    "Sascha Grunert <sgrunert@redhat.com>",
    "Toru Komatsu <k0ma@utam0k.jp>",
]
description = "Open Container Initiative Specifications in Rust"
documentation = "https://docs.rs/oci-spec"
readme = "README.md"
homepage = "https://github.com/youki-dev/oci-spec-rs"
repository = "https://github.com/youki-dev/oci-spec-rs"
license = "Apache-2.0"
keywords = ["oci", "spec", "container", "runtime", "image"]
categories = ["api-bindings"]

[features]
default = ["std", "distribution", "image", "runtime"]
proptests = ["quickcheck"]
std = [
    "serde/std",
    "serde_json/std",
    "thiserror/std",
    "strum/std",
    "derive_builder/std",
]
distribution = ["std", "dep:regex"]
image = ["std"]
runtime = []

[dependencies]
const_format = "0.2"
serde = { version = "1.0.129", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2.0.0", default-features = false }
serde_json = { version = "1.0.66", default-features = false, features = ["alloc"] }
quickcheck = { version = "1.0.3", optional = true }
derive_builder = { version = "0.20.0", default-features = false, features = ["alloc"] }
getset = "0.1.3"
strum = { version = "0.27.0", default-features = false }
strum_macros = "0.27.0"
regex = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3.23.0"
rstest = "0.26.1"
serde_json = { version = "1.0.66", features = ["preserve_order"] }
